Set additional options for Groovy Console and Groovy Script launches
#757